# learn-rust

./: .dockerignore  .gitignore  Caddyfile  Cargo.toml  Dockerfile  Makefile  README.md  configuration.yml  index.html  package.json  pnpm-lock.yaml  rustfmt.toml  spec.yml  tsconfig.json  vite.config.ts
.github/__unused/: rust-security-audit-cron.yml
.github/workflows/: rust-ci.yml  rust-security-audit-cron.yml  rust-security-audit-push.yml  rust-security-audit.yml
configuration/: base.yml  production.yml
migrations/: 20220507135526_create_subscriptions_table.sql  20220509030326_add_status_to_subscriptions.sql  20220509030800_make_status_not_null_in_subscriptions.sql  20220509031214_create_subscription_tokens_table.sql
scripts/: init_pg.sh
server/: Cargo.toml
server/src/: main.rs
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  root.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs  healthcheck.rs
tests/api/: health_check.rs  helpers.rs  subscription_confirm.rs  subscriptions.rs
