[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
tokio = { version = "1", features = ["full"] }
env_logger = "0.9.0"
postgres = "0.19.3"
openssl = "0.10.40"
postgres-openssl = "0.5.0"
actix-web = "4.0.1"
askama = { git = "https://github.com/djc/askama", branch = "main" }
askama_actix = { git = "https://github.com/djc/askama", branch = "main" }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
