[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
tokio = { version = "1", features = ["full"] }
env_logger = "0.9.0"
postgres = "0.19.3"
openssl = "0.10.40"
postgres-openssl = "0.5.0"
actix-web = "4.0.1"
askama = { git = "https://github.com/djc/askama", branch = "main" }
askama_actix = { git = "https://github.com/djc/askama", branch = "main" }
serde = { version = "1", features = ["derive"] }
config = "0.11"
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"
log = "0.4.17"
tracing = { version = "0.1", features = ["log"] }

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]


[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
